# 77695_data_science_i_flex

./: pyproject.toml
01_clase/: mi_primer_notebook.ipynb
02_clase/: README.md  challenge.ejercicios.md  intro_python.ipynb
03_clase/: 03_clase_numpy_pandas.ipynb  README.md  consumir-data.ipynb  teoria-practica.ipynb
04_clase/: 04_clase_base_teoria.ipynb  04_clase_en_vivo.ipynb  04_clase_graficos.ipynb  README.md  missing_values_treatment.md
04_clase/storage/: pune_1965_2002.csv
05_clase/: 00_extra_trabajo_dates.md  00_viz-matplotlib.ipynb  01_seaborn_python.ipynb  README.md  dates_viz_graficos.ipynb
06_clase/: 00_primera_entrega.md  01_00_ac_eda_analisis-riesgo.ipynb  03_entender_p_value_hipotesis_nula.ipynb  README.md  clase_06_codigo_vivo.ipynb
06_clase/primera-entrega-sample/: ProyectoDS_Parte_I_Ocana.ipynb
07_clase/: 01_03_aprendizaje-supervisado.md  01_regresion_lineal.ipynb  02_decision_tree_clasification.ipynb  regresion_lineal_simple_coderhouse.ipynb
08_clase/: 00_encoding.md  README.md
08_clase/clustering/: clustering_acciones.ipynb
08_clase/regresion/: lineal.ipynb
09_clase/: 00_metricas_clasificacion.md  01_metricas_regresion.md  README.md  clase_9_live_coding.ipynb
10_clase/: entrega_project_sample.ipynb
10_clase/ejemplo_b/: clase_10.ipynb
